# ESE_SEN

./: README.md
Code/AbstractInterfaces/: CppInterfaces  Dog.cpp  Dog.h  Fish.cpp  Fish.h  GermanShepherd.cpp  GermanShepherd.h  GoldFish.h  IPet.h  Interface  PetDog.h  PoliceDog.cpp  PoliceDog.h  StrayDog.h  a.out  abstractinterface  abstractinterfacetest  example  main  main.cpp
Code/PiStuff/: wpa_supplicant  wpa_supplicant.conf
Code/SHTExample/: SHT31.h
Code/SOLIDTerminal/SOLIDTerminalA/: SOLIDTerminalA.ino  UserInterface.h
Code/SOLIDTerminal/SOLIDTerminalB/: IOHandler.h  SOLIDTerminalB.ino  SerialConnectionManager.h  UserInterface.h
Code/SOLIDTerminal/SOLIDTerminalC/: IConnectionManager.h  SOLIDTerminalC.ino  SerialConnectionManager.h  UserInterface.h
Code/UnitTesting/: CMakeLists.txt  main.cpp
Code/helloworld/: main.cpp
SHTExample/: SHT31.cpp  SHT31.h  sensorTest.cpp
